--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,10 @@
 {
-    "require": {
-        "php-amqplib/php-amqplib": "^2.6"
-    }
+	"require": {
+		"php-amqplib/php-amqplib": "^3.2"
+	},
+	"autoload": {
+		"psr-4": {
+			"App\\": "src/"
+		}
+	}
 }
